@@ -9,12 +9,14 @@ import insane96mcp.survivalreimagined.SurvivalReimagined;
 import insane96mcp.survivalreimagined.base.SRFeature;
 import insane96mcp.survivalreimagined.data.generator.SRItemTagsProvider;
 import insane96mcp.survivalreimagined.module.Modules;
+import insane96mcp.survivalreimagined.network.message.JsonConfigSyncMessage;
 import insane96mcp.survivalreimagined.utils.Utils;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.tags.TagKey;
+import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantments;
@@ -29,7 +31,7 @@ import net.minecraftforge.eventbus.api.EventPriority;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 @Label(name = "Hoes", description = "Slower Hoes and more fragile. Hoes Properties are controlled via json in this feature's folder")
 @LoadFeature(module = Modules.Ids.FARMING)
@@ -40,7 +42,7 @@ public class Hoes extends SRFeature {
 	public static final String SCYTHE_RADIUS = "survivalreimagined.scythe_radius";
 	public static final TagKey<Item> DISABLED_HOES = SRItemTagsProvider.create("disabled_hoes");
 
-	public static final ArrayList<HoeStat> HOES_STATS_DEFAULT = new ArrayList<>(Arrays.asList(
+	public static final ArrayList<HoeStat> HOES_STATS_DEFAULT = new ArrayList<>(List.of(
 			new HoeStat(IdTagMatcher.newId("minecraft:wooden_hoe"), 40, 4, 0),
 			new HoeStat(IdTagMatcher.newId("minecraft:stone_hoe"), 30, 4, 1),
 			new HoeStat(IdTagMatcher.newId("survivalreimagined:flint_hoe"), 22, 4, 1),
@@ -52,7 +54,7 @@ public class Hoes extends SRFeature {
 			new HoeStat(IdTagMatcher.newId("survivalreimagined:coated_copper_hoe"), 10, 2, 2),
 			new HoeStat(IdTagMatcher.newId("minecraft:diamond_hoe"), 15, 3, 3),
 			new HoeStat(IdTagMatcher.newId("survivalreimagined:soul_steel_hoe"), 15, 2, 2),
-			new HoeStat(IdTagMatcher.newId("survivalreimagined:keego_hoe"), 8, 2, 3),
+			new HoeStat(IdTagMatcher.newId("survivalreimagined:keego_hoe"), 12, 2, 3),
 			new HoeStat(IdTagMatcher.newId("minecraft:netherite_hoe"), 10, 2, 3)
 	));
 
@@ -68,7 +70,7 @@ public class Hoes extends SRFeature {
 
 	public Hoes(Module module, boolean enabledByDefault, boolean canBeDisabled) {
 		super(module, enabledByDefault, canBeDisabled);
-		JSON_CONFIGS.add(new JsonConfig<>("hoes_stats.json", hoesStats, HOES_STATS_DEFAULT, HoeStat.LIST_TYPE));
+		JSON_CONFIGS.add(new JsonConfig<>("hoes_stats.json", hoesStats, HOES_STATS_DEFAULT, HoeStat.LIST_TYPE, true, JsonConfigSyncMessage.ConfigType.HOE_STATS));
 	}
 
 	@Override
@@ -76,6 +78,11 @@ public class Hoes extends SRFeature {
 		if (!this.isEnabled())
 			return;
 		super.loadJsonConfigs();
+	}
+
+	public static void handleSyncPacket(String json) {
+		loadAndReadJson(json, hoesStats, HOES_STATS_DEFAULT, HoeStat.LIST_TYPE);
+		//loadDurabilities(itemDurabilities, true);
 	}
 
 	@SubscribeEvent
@@ -107,20 +114,24 @@ public class Hoes extends SRFeature {
 	}
 
 	public void harderTilling(BlockEvent.BlockToolModificationEvent event) {
-		ItemStack hoe = event.getHeldItemStack();
+		ItemStack hoeStack = event.getHeldItemStack();
 		//noinspection ConstantConditions getPlayer can't be null as it's called from onHoeUse that checks if player's null
-		if (event.getPlayer().getCooldowns().isOnCooldown(hoe.getItem()))
+		Player player = event.getPlayer();
+        if (player == null
+				|| player.getCooldowns().isOnCooldown(hoeStack.getItem()))
 			return;
-		for (HoeStat hoeStat : hoesStats) {
-			if (hoeStat.hoe.matchesItem(hoe.getItem(), null)) {
+        for (HoeStat hoeStat : hoesStats) {
+			if (hoeStat.hoe.matchesItem(hoeStack.getItem(), null)) {
 				if (hoeStat.cooldown > 0) {
-					int efficiency = hoe.getEnchantmentLevel(Enchantments.BLOCK_EFFICIENCY);
+					int efficiency = hoeStack.getEnchantmentLevel(Enchantments.BLOCK_EFFICIENCY);
 					int cooldown = hoeStat.cooldown - (efficiency * efficiencyCooldownReduction);
+					if (hoeStack.getItem() instanceof IHoeCooldownModifier cooldownModifier)
+						cooldown = cooldownModifier.getCooldownOnUse(cooldown, player, player.level());
 					if (cooldown > 0)
-						event.getPlayer().getCooldowns().addCooldown(hoe.getItem(), cooldown);
+						player.getCooldowns().addCooldown(hoeStack.getItem(), cooldown);
 				}
 				if (hoeStat.damageOnTill > 1) {
-					hoe.hurtAndBreak(hoeStat.damageOnTill - 1, event.getPlayer(), (player) -> player.broadcastBreakEvent(event.getPlayer().getUsedItemHand()));
+					hoeStack.hurtAndBreak(hoeStat.damageOnTill - 1, player, (livingEntity) -> livingEntity.broadcastBreakEvent(livingEntity.getUsedItemHand()));
 				}
 				break;
 			}
@@ -130,7 +141,8 @@ public class Hoes extends SRFeature {
 	@SubscribeEvent(priority = EventPriority.LOW)
 	public void onBlockBreak(BlockEvent.BreakEvent event) {
 		if (!this.isEnabled()
-				|| !event.getState().canBeReplaced())
+				|| !event.getState().canBeReplaced()
+				|| event.getState().destroySpeed > 0f)
 			return;
 		for (HoeStat hoeStat : hoesStats) {
 			if (hoeStat.hoe.matchesItem(event.getPlayer().getMainHandItem().getItem(), null) && hoeStat.scytheRadius > 0) {
@@ -138,6 +150,7 @@ public class Hoes extends SRFeature {
 						.forEach(pos -> {
 							BlockState state = event.getPlayer().level().getBlockState(pos);
 							if (!state.canBeReplaced()
+									|| state.destroySpeed > 0f
 									|| !state.getFluidState().isEmpty()
 									|| pos.equals(event.getPos()))
 								return;
